--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Sturla22.GitHub.io
-description: 
+title: sturla22.gitHub.io
+description: Hello, I am Sturla Lange.
 google_analytics: 
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-midnight
 
 gems:
