--- a/_config.yml
+++ b/_config.yml
@@ -11,5 +11,5 @@ show_excerpts: true
 header_pages:
   - about.md
   - tags.md
-google_analytics: UA-26564805-3
+google_analytics: G-4WPTQHW2DS
 repository: Sturla22/Sturla22.github.io
