--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "_posts/includes/osvvm-advanced-usage"]
 	path = _posts/includes/osvvm-advanced-usage/osvvm-advanced-usage-template
 	url = git@github.com:Sturla22/osvvm_advanced_template.git
+[submodule "osvvm-advanced-usage-template"]
+	url = https://github.com/Sturla22/osvvm_advanced_template.git
