--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,10 @@
 title: "Sturla's Blog"
 description: "I'm an Embedded Electronics Engineer with an interest in all technology."
 
+plugins:
+  - jekyll-sitemap
+  - jekyll-seo-tag
+
 exclude: 
   - includes
 
@@ -16,3 +20,5 @@ header_pages:
   - tags.md
 google_analytics: G-4WPTQHW2DS
 repository: Sturla22/Sturla22.github.io
+url: sturla22.github.io
+logo: /assets/img/SturlasBlog.jpg
