--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description: "I'm an Embedded Electronics Engineer with an interest in all techn
 plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-feed
 
 exclude: 
   - includes
